--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>4.4.0.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
