--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 
-var=test
+logging.level.root=debug
+logging.level.com.javadevjournal=WARN
+logging.level.org.springframework.web=WARN
+
+logging.level.ru.sharovse.telegrambot.bots=debug
+
+bot.token=975627481:AAGZEp5g4lrHz1clwBCkkAcdEglYa1ukyyI
+bot.user=sharovse1bot
+
+bot.url=http://127.0.0.1:8012/
+
+bot.proxy=true
+
+bot.proxy.host=181.196.205.250
+bot.proxy.port=54024
