--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.main.banner-mode=off
 
 logging.level.root=debug
 logging.level.com.javadevjournal=WARN
@@ -5,12 +6,12 @@ logging.level.org.springframework.web=WARN
 
 logging.level.ru.sharovse.telegrambot.bots=debug
 
-bot.token=975627481:AAGZEp5g4lrHz1clwBCkkAcdEglYa1ukyyI
-bot.user=sharovse1bot
+bot.echo.token=975627481:AAGZEp5g4lrHz1clwBCkkAcdEglYa1ukyyI
+bot.echo.user=sharovse1bot
 
-bot.url=http://127.0.0.1:8012/
+bot.command.token=1049371726:AAE-KvwlP-NTuzSSY4LrPwbIs_cFg2W111k
+bot.command.user=SharovseCommand1_bot
 
 bot.proxy=true
-
-bot.proxy.host=181.196.205.250
-bot.proxy.port=54024
+bot.proxy.host=123.63.54.229
+bot.proxy.port=55207
