--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<artifactId>telegram-bot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>telegram-bot</name>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
